--- a/themes/cardbase.css
+++ b/themes/cardbase.css
@@ -35,7 +35,7 @@
     position: absolute;
     top: 4px;
     right: 6px;
-    font-size: 0.4rem;
+    font-size: 0.5rem;
     opacity: 0.6;
     text-transform: uppercase;
 }
